[tool.poetry]
name = "condor-tutorial"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
pymdown-extensions = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
